# oz_03_main-006-BE

./: .gitignore  Dockerfile  Procfile  README.md  crontab  docker-compose.yml  han_cycle.pem  han_cycle.pem.pub  nginx.cof  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: code_Rule.md  pull_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pull_request.md
.github/workflows/: checks.yml  code-convention.yml  deploy.yml
app/: manage.py
app/han_cycle/: asgi.py  settings.py
han_cycle/: __init__.py  requirements.txt  scraping.py
han_cycle/api/: models.py  serializers.py  urls.py  views.py
han_cycle/app/: __init__.py  adapters.py  asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
han_cycle/boards/: admin.py  apps.py  forms.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
han_cycle/han_cycle/: models.py  settings.py  urls.py  views.py  wsgi.py
han_cycle/htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_2d05418689a047ba___init___py.html  z_2f5769240839faf1_0001_initial_py.html  z_2f5769240839faf1_0002_initial_py.html  z_2f5769240839faf1_0003_post_location_py.html  z_2f5769240839faf1_0004_alter_post_location_py.html  z_2f5769240839faf1_0005_remove_post_region_py.html  z_2f5769240839faf1_0006_alter_post_tag_py.html  z_2f5769240839faf1___init___py.html  z_5ccd2b68bc3b4a07___init___py.html  z_5ccd2b68bc3b4a07_admin_py.html  z_5ccd2b68bc3b4a07_apps_py.html  z_5ccd2b68bc3b4a07_models_py.html  z_5ccd2b68bc3b4a07_pagination_py.html  z_5ccd2b68bc3b4a07_serializers_py.html  z_5ccd2b68bc3b4a07_signals_py.html  z_5ccd2b68bc3b4a07_tests_py.html  z_5ccd2b68bc3b4a07_urls_py.html  z_5ccd2b68bc3b4a07_views_py.html  z_5cf5a83d94097a15_0001_initial_py.html  z_5cf5a83d94097a15_0002_remove_weather_fcst_value_py.html  z_5cf5a83d94097a15_0003_alter_weather_pop_alter_weather_sky_and_more_py.html  z_5cf5a83d94097a15_0004_alter_weather_sky_py.html  z_5cf5a83d94097a15_0005_rename_tmn_weather_tmp_remove_weather_tmx_py.html  z_5cf5a83d94097a15_0006_rename_tmp_weather_t1h_py.html  z_5cf5a83d94097a15___init___py.html  (+67 more)
nginx/: nginx.conf
(+100 files in other folders)
