[tool.poetry]
name = "oz-03-main-006-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
psycopg = "^3.2.1"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
