[tool.poetry]
name = "oz-03-main-006-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
psycopg = "^3.2.1"
djangorestframework = "^3.15.2"
social-auth-app-django = "^5.4.2"
django-storages = "^1.14.4"
boto3 = "^1.34.145"
pillow = "^10.4.0"
django-allauth = "^0.63.6"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-tinymce = "^4.1.0"
django-cors-headers = "^4.4.0"
setuptools = "^71.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
