[tool.poetry]
name = "oz-03-main-006-be"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
psycopg = "^3.2.1"
djangorestframework = "^3.15.2"
social-auth-app-django = "^5.4.2"
django-storages = "^1.14.4"
boto3 = "^1.34.145"
pillow = "^10.4.0"
django-allauth = "^0.63.6"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-tinymce = "^4.1.0"
django-cors-headers = "^4.4.0"
setuptools = "^71.1.0"
elasticsearch-dsl = "^8.14.0"
celery = "^5.4.0"
redis = "^5.0.7"
requests = "^2.32.3"
flower = "^2.0.1"
beautifulsoup4 = "^4.12.3"
django-celery-beat = "^2.6.0"
black = "^24.4.2"
isort = "^5.13.2"
retrying = "^1.3.4"
django-crontab = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
